# HotelManagementC

./: .ninja_deps  .ninja_log  CMakeCache.txt  CMakeLists.txt  HotelManagementC_instructions.txt  README.md  build.ninja  cmake_install.cmake  compilar_proyecto.txt
database/: hotel_management_c.sql
include/: client_manager.h  report_manager.h  reservation_manager.h  room_manager.h  utils.h
logs/: registro_eventos.txt
src/: client_manager.cpp  main.cpp  report_manager.cpp  reservation_manager.cpp  room_manager.cpp  utils.cpp
